# CLUE

./: .gitignore  .gitmodules  requirements.txt  setup.py
.github/workflows/: pylint.yml  pytest.yml
clue/: clue.py  linalg.py  numerical_domains.py  qiskit.py  rational_function.py
cpp/clue/: CMakeLists.txt
cpp/clue/apps/: CMakeLists.txt  main.cpp  main_DD.cpp  main_QASM.cpp  main_script.cpp
cpp/clue/include/: Linalg.hpp  RationalFunctions.h  RationalFunctions.hpp  Types.hpp
cpp/clue/include/experiments/: BenchmarkExperiment.hpp  CUTExperiment.hpp  Experiment.hpp  GroverExperiment.hpp  SATExperiment.hpp
cpp/clue/include/experiments/benchmark/: AmplitudeEstimation.hpp  DeutschJozsa.hpp  GHZ.hpp  GraphState.hpp  HHL.hpp  PortfolioQAOA.hpp  PortfolioVQE.hpp  PricingCall.hpp  PricingPut.hpp  QPEExact.hpp  QPEInexact.hpp  QuantumFourierTransform.hpp  QuantumNeuralNetwork.hpp  QuantumWalk.hpp  TravellingSalesman.hpp  VariationalQuantumEigensolver.hpp  WState.hpp
cpp/clue/src/: CMakeLists.txt  Linalg.cpp  Linalg_DD.cpp  Linalg_Subspace.cpp  Linalg_Vector.cpp  RationalFunctions.cpp  main.cpp
cpp/clue/src/experiments/: BenchmarkExperiment.cpp  CMakeLists.txt  CUTExperiment.cpp  Experiment.cpp  GroverExperiment.cpp  SATExperiment.cpp
cpp/clue/src/experiments/benchmark/: AmplitudeEstimation.cpp  CMakeLists.txt  DeutschJozsa.cpp  GHZ.cpp  GraphState.cpp  HHL.cpp  PortfolioQAOA.cpp  PortfolioVQE.cpp  PricingCall.cpp  PricingPut.cpp  QPEExact.cpp  QPEInexact.cpp  QuantumFourierTransform.cpp  QuantumNeuralNetwork.cpp  QuantumWalk.cpp  TravellingSalesman.cpp  VariationalQuantumEigensolver.cpp  WState.cpp
cpp/clue/tests/: CMakeLists.txt  LA_Vector_Tests.cpp
cpp/clue/tests/src/: Linalg_Vector_Tests.cpp  RationalFunctions_Tests.cpp
notebooks/: lls.ipynb  numerical_quantum.ipynb
papers/quantum/: Makefile  early_light.sh  misc.py  q_maxcut.py  q_numerical.py  q_order.py  q_search.py
papers/quantum/results/: [result]q_benchmark_full_ddsim.csv  [result]q_search_full_clue.csv
tests/: table3_test.sh
tests/lls/: todo.md
tests/quantum/: Compressing circuits.ipynb  Makefile  README.md  [result]old_q_maxcut_full_clue.csv  [result]old_q_sat_full_clue.csv  [result]old_q_search_ddsim.csv  [result]old_q_search_full_ddsim.csv  [result]q_maxcut_clue.csv  [result]q_maxcut_ddsim.csv  [result]q_maxcut_direct.csv  [result]q_maxcut_full_clue.csv  [result]q_maxcut_full_ddsim.csv  [result]q_order_clue.csv  [result]q_sat_clue.csv  [result]q_sat_ddsim.csv  [result]q_sat_direct.csv  [result]q_sat_full_clue.csv  [result]q_sat_full_ddsim.csv  [result]q_search_clue.csv  [result]q_search_ddsim.csv  [result]q_search_full_clue.csv  [result]q_search_full_ddsim.csv  case_studies.html  case_studies.ipynb  cases_table.tex  compilation.csv  compiled_data.tex  compiled_data_with0.tex  demo.ipynb  hamiltonian.csv  misc.py  print_table.py  q_benchmark.py  q_maxcut.py  q_numerical.py  q_order.py  q_sat.py  q_search.py  requirements.txt  sat_maxcut_test.sh  (+12 more)
tests/quantum/circuits/: ae_indep_qiskit_3.qasm  ae_indep_qiskit_4.qasm  ae_indep_qiskit_5.qasm  ae_indep_qiskit_6.qasm  ae_indep_qiskit_7.qasm  dj_indep_qiskit_3.qasm  dj_indep_qiskit_4.qasm  dj_indep_qiskit_5.qasm  dj_indep_qiskit_6.qasm  dj_indep_qiskit_7.qasm  ghz_indep_qiskit_3.qasm  ghz_indep_qiskit_4.qasm  ghz_indep_qiskit_5.qasm  ghz_indep_qiskit_6.qasm  ghz_indep_qiskit_7.qasm  graphstate_indep_qiskit_3.qasm  graphstate_indep_qiskit_4.qasm  graphstate_indep_qiskit_5.qasm  graphstate_indep_qiskit_6.qasm  graphstate_indep_qiskit_7.qasm  groundstate_large_indep_qiskit_14.qasm  groundstate_medium_indep_qiskit_12.qasm  groundstate_small_indep_qiskit_4.qasm  grover-noancilla_indep_qiskit_10.qasm  grover-noancilla_indep_qiskit_11.qasm  grover-noancilla_indep_qiskit_3.qasm  grover-noancilla_indep_qiskit_5.qasm  grover-noancilla_indep_qiskit_6.qasm  grover-noancilla_indep_qiskit_7.qasm  grover-noancilla_indep_qiskit_8.qasm  grover-noancilla_indep_qiskit_9.qasm  grover-noancilla_indep_qiskit_no_H_3.qasm  grover-noancilla_indep_qiskit_no_H_4.qasm  grover-noancilla_indep_qiskit_no_H_5.qasm  grover-noancilla_indep_qiskit_no_H_6.qasm  grover-v-chain_indep_qiskit_11.qasm  grover-v-chain_indep_qiskit_4.qasm  grover-v-chain_indep_qiskit_5.qasm  grover-v-chain_indep_qiskit_7.qasm  grover-v-chain_indep_qiskit_9.qasm  (+121 more)
tests/quantum/circuits/hamiltonians/: formula.qasm  formula_10_13.qasm
tests/quantum/circuits/reduced/: grover-noancilla_indep_qiskit_7.qasm  grover-noancilla_indep_qiskit_7.qasm.npy  grover-noancilla_indep_qiskit_7.qasm.qpy
tests/quantum/graphs/: graph_9_19.qasm  graph_9_20.qasm  graph_9_21.qasm  graph_9_22.qasm  graph_9_23.qasm  graph_9_26.qasm  graph_9_27.qasm
tests/quantum/hamiltonians/: formula_20_25.qasm  formula_20_36.qasm  formula_5_2.qasm  formula_9_12.qasm  formula_9_8.qasm
tests/quantum/results/: [result-cpp]q_benchmark_clue.csv  [result-cpp]q_benchmark_ddsim.csv  [result-cpp]q_benchmark_full_ddsim.csv  [result-cpp]q_maxcut_clue.csv  [result-cpp]q_maxcut_ddsim.csv  [result-cpp]q_maxcut_direct.csv  [result-cpp]q_maxcut_full_ddsim.csv  [result-cpp]q_sat_clue.csv  [result-cpp]q_sat_ddsim.csv  [result-cpp]q_sat_direct.csv  [result-cpp]q_sat_full_ddsim.csv  [result-cpp]q_search_clue.csv  [result-cpp]q_search_ddsim.csv  [result-cpp]q_search_full_ddsim.csv  [result]old_q_maxcut_ddsim.csv  [result]old_q_maxcut_full_ddsim.csv  [result]old_q_sat_ddsim.csv  [result]old_q_sat_full_ddsim.csv  [result]old_q_search_clue.csv  [result]old_q_search_full_clue.csv  [result]q_benchmark_clue.csv  [result]q_benchmark_full_ddsim.csv  [result]q_maxcut_ddsim.csv  [result]q_maxcut_direct.csv  [result]q_maxcut_full_clue.csv  [result]q_maxcut_full_ddsim.csv  [result]q_maxcut_full_direct.csv  [result]q_order_clue.csv  [result]q_sat_clue.csv  [result]q_sat_direct.csv  [result]q_sat_full_clue.csv  [result]q_sat_full_ddsim.csv  [result]q_sat_full_direct.csv  [result]q_search_full_clue.csv  [result]q_search_full_ddsim.csv
